# pn352-zephyr-driver

./: .codecov.yml  .gitignore  CMakeLists.txt  Kconfig  README.md  pn532_i2c.c  pn532_spi.c  pn532_uart.c  west.yml
.github/workflows/: build.yml  coverage.yml  test.yml
boards/: pn532_i2c.overlay  pn532_spi.overlay  pn532_uart.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/nfc/pn532/: CMakeLists.txt  Kconfig  pn532.c  pn532_i2c.c  pn532_spi.c  pn532_uart.c
drivers/pn532/: CMakeLists.txt  Kconfig  emul_pn532.c  pn532.c  pn532.h  pn532_transport.h  pn532_transport_i2c.c  pn532_transport_mock.c
dts/bindings/: nxp,pn532-i2c.yaml  nxp,pn532-spi.yaml  nxp,pn532-uart.yaml
dts/bindings/nfc/: nxp,pn532.yaml
dts/bindings/sensor/: nxp,pn532.yaml
include/: pn532.h
include/zephyr/drivers/pn532/: pn532.h
samples/drivers/pn532/src/: main.c
samples/nfc/pn532/boards/: native_sim.conf
samples/pn532/: CMakeLists.txt  prj.conf
samples/pn532/basic/: CMakeLists.txt  README.md  prj.conf  west.yml
samples/pn532/basic/boards/: native_sim.overlay  nucleo_f767zi.conf  nucleo_f767zi.overlay
samples/pn532/boards/: nucleo_f767zi.overlay
samples/pn532/src/: main.c
tests/drivers/pn532/: CMakeLists.txt  prj.conf  testcase.yaml
tests/pn532/: CMakeLists.txt  test_pn532.c
tests/pn532/zephyr/: test_pn532.overlay
tests/unit/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/boards/: native_sim.conf  native_sim.overlay
tests/unit/pn532/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/pn532/src/: main.c
tests/unit/src/: main.c
zephyr/: module.yml
(+4 files in other folders)
